--- a/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
+++ b/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="pageContentConroller" id="vbT-r0-ggN" customClass="PageContentViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="342" sectionHeaderHeight="22" sectionFooterHeight="22" id="Qwr-yC-NoG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.95283776521682739" green="0.95300072431564331" blue="0.95282751321792603" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="separatorColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -334,6 +334,88 @@
                                     <outlet property="FCCellTitle" destination="Ivk-3z-2k7" id="1HM-Dk-i82"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FCCell4" rowHeight="410" id="Q7y-wv-s19" userLabel="FCCell1.6:1" customClass="FCTableViewCell4">
+                                <rect key="frame" x="0.0" y="696" width="320" height="250"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q7y-wv-s19" id="yiJ-RH-wGB">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rJo-qL-jJ6">
+                                            <rect key="frame" x="8" y="0.0" width="304" height="400"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="400" id="zA5-X0-Lck"/>
+                                            </constraints>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpu-Qq-6Nh">
+                                            <rect key="frame" x="8" y="313" width="304" height="87"/>
+                                            <subviews>
+                                                <view alpha="0.70000000000000007" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IrK-hG-BhX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="304" height="87"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="НОВОСТИ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZI-3r-VBb" userLabel="Категория">
+                                                    <rect key="frame" x="8" y="8" width="61" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="owX-LF-aI3"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="вчера" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="phb-g3-W5R" userLabel="Дата">
+                                                    <rect key="frame" x="77" y="8" width="34" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="lGl-hb-Lpz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кристин Сентенера: всегда на каблуках" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="yUh-cK-Av8">
+                                                    <rect key="frame" x="8" y="36" width="288" height="41"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="yUh-cK-Av8" secondAttribute="bottom" constant="10" id="1j8-3N-UAt"/>
+                                                <constraint firstItem="rZI-3r-VBb" firstAttribute="leading" secondItem="cpu-Qq-6Nh" secondAttribute="leading" constant="8" id="8wc-P8-fx2"/>
+                                                <constraint firstItem="IrK-hG-BhX" firstAttribute="top" secondItem="cpu-Qq-6Nh" secondAttribute="top" id="EkT-Rz-v13"/>
+                                                <constraint firstItem="IrK-hG-BhX" firstAttribute="leading" secondItem="cpu-Qq-6Nh" secondAttribute="leading" id="LeY-Jh-snz"/>
+                                                <constraint firstItem="rZI-3r-VBb" firstAttribute="top" secondItem="cpu-Qq-6Nh" secondAttribute="top" constant="8" id="Lx6-cy-eGI"/>
+                                                <constraint firstItem="phb-g3-W5R" firstAttribute="leading" secondItem="rZI-3r-VBb" secondAttribute="trailing" constant="8" id="WOl-Ui-vGx"/>
+                                                <constraint firstAttribute="trailing" secondItem="IrK-hG-BhX" secondAttribute="trailing" id="cx2-0h-Mk4"/>
+                                                <constraint firstAttribute="bottom" secondItem="IrK-hG-BhX" secondAttribute="bottom" id="d1C-dU-0tc"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="dw7-yM-uJO"/>
+                                                <constraint firstItem="yUh-cK-Av8" firstAttribute="top" secondItem="phb-g3-W5R" secondAttribute="bottom" constant="8" id="iFC-bN-4nh"/>
+                                                <constraint firstItem="phb-g3-W5R" firstAttribute="top" secondItem="cpu-Qq-6Nh" secondAttribute="top" constant="8" id="mtc-Ms-K9P"/>
+                                                <constraint firstItem="yUh-cK-Av8" firstAttribute="leading" secondItem="cpu-Qq-6Nh" secondAttribute="leading" constant="8" id="ntX-ux-lpW"/>
+                                                <constraint firstAttribute="trailing" secondItem="yUh-cK-Av8" secondAttribute="trailing" constant="8" id="s9E-5d-IRt"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="cpu-Qq-6Nh" secondAttribute="bottom" constant="10" id="CIS-cS-GNB"/>
+                                        <constraint firstAttribute="bottom" secondItem="rJo-qL-jJ6" secondAttribute="bottom" constant="10" id="JMC-hm-wrT"/>
+                                        <constraint firstItem="rJo-qL-jJ6" firstAttribute="top" secondItem="yiJ-RH-wGB" secondAttribute="top" id="m6c-l6-rnn"/>
+                                        <constraint firstAttribute="trailing" secondItem="rJo-qL-jJ6" secondAttribute="trailing" constant="8" id="mRd-tG-3FH"/>
+                                        <constraint firstAttribute="trailing" secondItem="cpu-Qq-6Nh" secondAttribute="trailing" constant="8" id="rwe-Hq-CAa"/>
+                                        <constraint firstItem="cpu-Qq-6Nh" firstAttribute="leading" secondItem="yiJ-RH-wGB" secondAttribute="leading" constant="8" id="u6V-yx-KxR"/>
+                                        <constraint firstItem="rJo-qL-jJ6" firstAttribute="leading" secondItem="yiJ-RH-wGB" secondAttribute="leading" constant="8" id="wbf-WU-SDd"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="FCCellCategory" destination="rZI-3r-VBb" id="lAO-am-D8T"/>
+                                    <outlet property="FCCellDate" destination="phb-g3-W5R" id="kfX-v4-F9M"/>
+                                    <outlet property="FCCellFeaturedImage" destination="rJo-qL-jJ6" id="PYA-JW-qaK"/>
+                                    <outlet property="FCCellTitle" destination="yUh-cK-Av8" id="Uge-Pu-EM1"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="vbT-r0-ggN" id="dnS-CZ-FzE"/>
@@ -345,14 +427,14 @@
                         <barButtonItem key="leftBarButtonItem" image="MenuIcon" id="S5A-r3-lhn"/>
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="1000"/>
+                    <size key="freeformSize" width="320" height="1500"/>
                     <connections>
                         <outlet property="barButtonMenuIcon" destination="S5A-r3-lhn" id="qxy-gt-wS7"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bH4-xd-YE6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2195.625" y="1070.0704225352113"/>
+            <point key="canvasLocation" x="2195" y="1070"/>
         </scene>
         <!--NewsContentContoller-->
         <scene sceneID="0sM-Kz-DUe">
@@ -363,7 +445,7 @@
                         <viewControllerLayoutGuide type="bottom" id="HLM-Nn-Xry"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zhR-2X-shM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aJg-wK-cia">
